# mini-server

./: Cargo.toml  LICENSE  README.md
assets/ip_logger/: index.html  index.js
src/: json_db.rs  main.rs  responses.rs
src/routes/: mod.rs  valheim.rs
src/services/: mod.rs  valheim.rs
src/services/ip_logger/: mod.rs
src/types/: valheim.rs
