[package]
name = "mini-server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
